--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 <body>
     <header>
-        <h1>Code Village</h1>
+        <h1>Code Village 2070</h1>
     </header>
     <main>
         <aside class="menu">
